[package]
name = "xlwings"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata.maturin]
name = "xlwings.xlwingslib"

[lib]
name = "xlwings"
crate-type = ["cdylib"]

[dependencies]
calamine = {git = "https://github.com/xlwings/calamine", rev = "d8ee3df0ea144fbb8068c9d7eabe2b3ab9cf848c", features = ["dates"] }
chrono = { version = "0.4.24", features = ["serde"], default-features = false }
# abi3 wheels aren't supported as DateTime is not part of the ABI spec (PEP 384)
pyo3 = { version = "0.18.3", features = ["extension-module", "chrono"] }
