[package]
name = "xlwings"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata.maturin]
name = "xlwings.xlwingslib"

[lib]
name = "xlwings"
crate-type = ["cdylib"]

[dependencies]
calamine = {git = "https://github.com/xlwings/calamine", rev = "ed0a4bde9ae0d0abaeeaed26b0fbd5b20cce91b8", features = ["dates"] }
chrono = { version = "0.4.31", features = ["serde"], default-features = false }
# abi3 wheels aren't supported as DateTime is not part of the ABI spec (PEP 384)
pyo3 = { version = "0.26.0", features = ["extension-module", "chrono"] }
